<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SOS App</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoic29tZW9uZXV6YmVrIiwiYSI6ImNsbzJqdmY0NTBzOHEyanA3bjBuM2VtMHcifQ.1_88MdYyVjXhpaNWld4rGg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numbers">Qisqa raqamlar</string>
    <string name="about">Dastur haqida</string>
    <string name="sos">SOS</string>
    <string name="version">Versiya: 1.0.0</string>
    <string name="settings">Sozlamalar</string>
    <string name="sos_number_title">Joylashuv ma\'lumotlari</string>
    <string name="sms_number_title">Kimlarga sms yuborilsin?</string>
    <string name="location_title">Joylashuvni nazorat qilish</string>
    <string name="phone">Telefon raqam</string>
    <string name="save">Saqlash</string>
    <string name="success">Telefon raqam qo\'shildi</string>
    <string name="enter_number">Ma\'lumotlarni to\'g\'ri formatda kiriting</string>
    <string name="phone_mask">+### (##) ###-##-##</string>
    <string name="number">+998 99 500 61 23</string>
    <string name="ok">Hammasi yaxshi</string>
    <string name="exit_app">Dasturdan chiqish uchun yana 1 marta bosing</string>
    <string name="distance">Radius(metr)</string>
    <string name="time">Vaqt(minut)</string>
    <string name="location_info">Joylashuv ma\'lumotlari</string>
</resources>