<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.AddSOSNumberFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_left"
        app:navigationIconTint="@color/black">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_medium"
            android:text="@string/location_info"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:drawablePadding="10dp"
        android:hint="@string/time"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_shape"
        android:drawablePadding="10dp"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/input_shape"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>